--- a/quitbotton.qrc
+++ b/quitbotton.qrc
@@ -4,5 +4,6 @@
         <file>ButtonQuit.jpg</file>
         <file>setTower.jpg</file>
         <file>setEnemybutton.jpg</file>
+        <file>chap1.jpg</file>
     </qresource>
 </RCC>
